@@ -53,7 +53,7 @@ public class PartialLRUEvictorTestBase extends EvictorTestBase {
     Assert.assertNotNull(plan);
     Assert.assertTrue(plan.toMove().isEmpty());
     Assert.assertEquals(1, plan.toEvict().size());
-    long toEvictBlockId = plan.toEvict().get(0);
+    long toEvictBlockId = plan.toEvict().get(0).getFirst();
     Assert.assertEquals(BLOCK_ID + nDir - 1, toEvictBlockId);
   }
 
@@ -76,7 +76,7 @@ public class PartialLRUEvictorTestBase extends EvictorTestBase {
     Assert.assertTrue(EvictorTestUtils.validCascadingPlan(smallestCapacity, plan, mMetaManager));
     Assert.assertEquals(0, plan.toEvict().size());
     Assert.assertEquals(1, plan.toMove().size());
-    long blockId = plan.toMove().get(0).getFirst();
+    long blockId = plan.toMove().get(0).getBlockId();
     Assert.assertEquals(BLOCK_ID + nDir - 1, blockId);
   }
 
@@ -108,12 +108,12 @@ public class PartialLRUEvictorTestBase extends EvictorTestBase {
     // block in StorageDir with max free space in the first tier needs to be moved to the second
     // tier
     Assert.assertEquals(1, plan.toMove().size());
-    long blockIdMovedInFirstTier = plan.toMove().get(0).getFirst();
+    long blockIdMovedInFirstTier = plan.toMove().get(0).getBlockId();
     Assert.assertEquals(BLOCK_ID + nDirInFirstTier - 1, blockIdMovedInFirstTier);
     // block in StorageDir with max free space in the second tier will be evicted to hold blocks
     // moved from first tier
     Assert.assertEquals(1, plan.toEvict().size());
-    long blockIdEvictedInSecondTier = plan.toEvict().get(0);
+    long blockIdEvictedInSecondTier = plan.toEvict().get(0).getFirst();
     Assert.assertEquals(BLOCK_ID + nDirInFirstTier + nDirInSecondTier - 1,
         blockIdEvictedInSecondTier);
   }
